# apod-discord-bot-python

./: .env.sample  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml
bot-env/: pyvenv.cfg
bot-env/Scripts/: activate  activate.bat
nasa/: apod.py
spacestop/: apod.py
src/: apod_object_parser.py  bot.py
src/cogs/: spacestop.py
src/spacestop/: __init__.py  __main__.py  article.py  article_ui.py  parser.py
src/spacestop/ui/: navigation.py
